white space fix

--- a/style copy.css
+++ b/style copy.css
@@ -3,20 +3,12 @@
   transition: 0.3s;
 }
 
-.icopos {
-  position: absolute !important;
-  left: 0 !important;
-  right: 0 !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  bottom: 60px !important;
-}
-
 .whitespc {
   white-space: nowrap;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  border: 1px solid #000000;
 }
 
 a {
@@ -306,11 +298,4 @@ a:hover {
     width: 100%;
     height: 100%;
   } */
-  .txtlimit {
-    word-wrap: break-word;
-  }
-
-  .centered {
-    text-align: center;
-  }
 }
